sample/msvc/error/c2312.cpp
// C2312.cpp
// compile with: /EHsc
// #include <eh.h>
int main() {
    try {
        throw "ooops!";
    }
    catch( signed int ) {}
    catch( int ) {}   // C2312
}
